[DBG] fix reference link

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -170,11 +170,13 @@
                     
                     <p class="mb-5 text-primary">
                         <b> References: </b><br>
-                        <br> [1] Wold, S., Esbensen, K., & Geladi, P. (1987). Principal component analysis. Chemometrics and intelligent laboratory systems, 2(1-3), 37-52.
-                        <br> [2] Borg, I., & Groenen, P. (2003). Modern multidimensional scaling: Theory and applications. Journal of Educational Measurement, 40(3), 277-280.
-                        <br> [3] Carlsson, G. (2009). Topology and data. Bulletin of the American Mathematical Society, 46(2), 255-308.
-                        <br> [4] Churchland, M. M., Cunningham, J. P., Kaufman, M. T., Foster, J. D., Nuyujukian, P., Ryu, S. I., & Shenoy, K. V. (2012). Neural population dynamics during reaching. Nature, 487(7405), 51.
-                        <br> [5] Lin, B., Mur, M., Kietzmann, T., & Kriegeskorte, N. (2019). Visualizing Representational Dynamics with Multidimensional Scaling Alignment. arXiv preprint arXiv:1906.09264.
+                        <br> [1] Wold, S., Esbensen, K., & Geladi, P. (1987). Principal component analysis. <i>Chemometrics and intelligent laboratory systems</i>, 2(1-3), 37-52.
+                        <br> [2] Borg, I., & Groenen, P. (2003). Modern multidimensional scaling: Theory and applications. <i>Journal of Educational Measurement</i>, 40(3), 277-280.
+                        <br> [3] Carlsson, G. (2009). Topology and data. <i>Bulletin of the American Mathematical Society</i>, 46(2), 255-308.
+                        <br> [4] Churchland, M. M., Cunningham, J. P., Kaufman, M. T., Foster, J. D., Nuyujukian, P., Ryu, S. I., & Shenoy, K. V. (2012). Neural population dynamics during reaching. <i> Nature</i>, 487(7405), 51.
+                        <br> [5] Lin, B., Mur, M., Kietzmann, T., & Kriegeskorte, N. (2019). Visualizing Representational Dynamics with Multidimensional Scaling Alignment. <i>2019 Conference on Cognitive Computational Neuroscience (CCN)</i>, 1030-1033
+                        <br> [6] Lin, B. Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. <i> 2019 Conference on Intelligent Systems for Molecular Biology (ISMB)</i>.
+                        <br> [7] Lin, B., Rabadan, R., & Kriegeskorte, N. (2019) What About Higher-Order Cellular Complexity? An Inquiry with Topological Simplicial Analysis. <i> 2019 NeurIPS 2019 Workshop on Learning Meaningful Representations of Life (LMRL)</i>.
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
                     </p>
 
