[DBG] change canvas size for plot

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
         <br /><br/>
-        <p style="color:black"> NIPS 2019 Workshop on Biological & Artificial RL (BARL) </p>
+        <p style="color:black"> NeurIPS 2019 Workshop on Biological & Artificial RL (BARL) </p>
         [
         <a href="https://arxiv.org/abs/1906.11286" style="color:#3498db">arXiv</a>
         ]&nbsp; [
@@ -423,7 +423,7 @@
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Raul Rabadan, Nikolaus Kriegeskorte
         <br /><br/>
-        <p style="color:black"> NIPS 2019 Workshop on Learning Meaningful Representations of Life (LMRL) </p>
+        <p style="color:black"> NeurIPS 2019 Workshop on Learning Meaningful Representations of Life (LMRL) </p>
         <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
         <!-- [<a href="./bibTex/lin2019reinforce.txt" style="color:#3498db">bibTex</a>]&nbsp; -->
         [
