--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -165,6 +165,7 @@
                             .nodeAutoColorBy('group')
                             .linkSource('source')
                             .linkTarget('target')
+                            .height(500)
                         });
                     </script>
                     
